--- a/src/main/resources/.env.example
+++ b/src/main/resources/.env.example
@@ -1,6 +1,3 @@
-#Config
-DEBUG=true
-
 # Database
 
     DB_NAME=node_observer
@@ -21,4 +18,10 @@ DEBUG=true
     SLACK_DEV_WEBHOOK=
     SLACK_DEV_TOKEN=
 
-#EOF
+#Config
+
+    #in ms
+    TIMEOUT=10000
+
+    #send messages to debug slack channel
+    DEBUG=false
